JumpScript/tests/baselines/reference/letAsIdentifierInStrictMode.errors.txt
tests/cases/compiler/letAsIdentifierInStrictMode.jump(2,5): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
tests/cases/compiler/letAsIdentifierInStrictMode.jump(3,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/letAsIdentifierInStrictMode.jump(4,1): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
tests/cases/compiler/letAsIdentifierInStrictMode.jump(6,1): error TS2300: Duplicate identifier 'a'.


==== tests/cases/compiler/letAsIdentifierInStrictMode.jump (4 errors) ====
    "use strict";
    var let = 10;
        ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    var a = 10;
        ~
!!! error TS2300: Duplicate identifier 'a'.
    let = 30;
    ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    let
    a;
    ~
!!! error TS2300: Duplicate identifier 'a'.